--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "20",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://wodawodawoda.github.io/20",
   "dependencies": {
     "bootstrap": "^4.1.0",
     "react": "^16.3.2",
@@ -15,9 +16,13 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+          "predeploy": "npm run build",
+      "deploy": "gh-pages -d build"
+
   },
   "devDependencies": {
+    "gh-pages": "^1.1.0",
     "redux-devtools": "^3.4.1",
     "redux-devtools-dock-monitor": "^1.1.3",
     "redux-devtools-log-monitor": "^1.4.0"
